fix: Set the terminals size to end at the right side of the window to prevent overflow.

--- a/src/elements/window/tool/terminal/terminal.css
+++ b/src/elements/window/tool/terminal/terminal.css
@@ -5,7 +5,7 @@
   position: fixed;
   bottom: 0;
   left: 273px;
-  width: 99.5%;
+  right: 0;
   height: 200px;
   scroll-behavior: smooth;
 }
@@ -22,4 +22,9 @@
 .terminal::-webkit-scrollbar-thumb {
   background-color: #888;
   border-radius: 5px;
+}
+
+.content {
+  overflow: clip;
+  border: 0;
 }
